[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["rudy desplan <desrudy@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pylint = "^3.3.1"
requests = "^2.32.3"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
